<resources>
    <string name="app_name">Spread-the-TaC-News</string>
    <string name="imagemnoticia">Imagem da Notícia</string>
    <string name="avaliar">Avaliar</string>
    <string name="registo">REGISTO</string>
    <string name="registar">Registar</string>
    <string name="login">LOGIN</string>
    <string name="tac">TAC</string>
    <string name="verNoticias">Ver Notícias</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirmar Password</string>
    <string name="nome">Nome</string>
    <string name="semInternet">Sem Conexão à Internet</string>
    <string name="avaliarNoticia">avaliar de 1 a 5</string>
</resources>